--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tar command | tarcommand.com</title>
+    <title>tar command generator | tarcommand.com</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -17,12 +17,13 @@
     <meta name="robots" content="noodp" />
     <link rel="canonical" href="https://tarcommand.com/" />
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="Tar Generator | Tar Command" />
+    <meta name="og:title" content="Tar Command Generator | Tar Command" />
     <meta name="og:description"
         content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="og:url" content="https://tarcommand.com/" />
     <meta name="og:site_name" content="Tar Command Generator" />
     <meta name="og:type" content="website" />
+    <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
 </head>
 
 <body class="bg-slate-100">
