--- a/404.html
+++ b/404.html
@@ -250,6 +250,81 @@
                     /etc</span></div>
         </div>
         <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
+            <table class="table-auto w-5/6 text-right">
+                <caption>~1.2G SQL dump file</caption>
+                <thead>
+                    <tr>
+                        <th>tool</th>
+                        <th>filesize</th>
+                        <th>time</th>
+                        <th>cpu time</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>gzip</th>
+                        <td>147M</td>
+                        <td>15.578s</td>
+                        <td>16.599s</td>
+                    </tr>
+                    <tr>
+                        <th>bzip2</th>
+                        <td>85M</td>
+                        <td>1m19.798s</td>
+                        <td>1m22.932s</td>
+                    </tr>
+                    <tr>
+                        <th>lbzip2</th>
+                        <td>85M</td>
+                        <td>4.692s</td>
+                        <td>1m14.495s</td>
+                    </tr>
+                    <tr>
+                        <th>xz</th>
+                        <td class="text-green-600 font-bold">66M</td>
+                        <td>3m1.554s</td>
+                        <td>3m6.561s</td>
+                    </tr>
+                    <tr>
+                        <th>lzip</th>
+                        <td>69M</td>
+                        <td>3m1.640s</td>
+                        <td>3m2.038s</td>
+                    </tr>
+                    <tr>
+                        <th>lzma</th>
+                        <td class="text-green-600 font-bold">66M</td>
+                        <td>2m56.603s</td>
+                        <td>3m0.806s</td>
+                    </tr>
+                    <tr>
+                        <th>lzop</th>
+                        <td>275M</td>
+                        <td>2.681s</td>
+                        <td>3.207s</td>
+                    </tr>
+                    <tr>
+                        <th>zstd</th>
+                        <td>105M</td>
+                        <td>2.108s</td>
+                        <td>3.119s</td>
+                    </tr>
+                    <tr>
+                        <th>pzstd</th>
+                        <td>106M</td>
+                        <td class="text-green-600 font-bold">0.642s</td>
+                        <td>7.572s</td>
+                    </tr>
+                    <tr>
+                        <th>compress</th>
+                        <td>304M</td>
+                        <td>14.049s</td>
+                        <td>16.526s</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
             Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>
         </div>
         <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
