remove file exec right

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tar command Generator | tarcommand.com</title>
+  <title>tar command generator | tarcommand.com</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -13,13 +13,13 @@
   <link href="/css/tailwind.css" rel="stylesheet">
   <script src="/js/main.js"></script>
   <meta name="description"
-    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
   <meta name="robots" content="noodp" />
   <link rel="canonical" href="https://tarcommand.com/" />
   <!-- Open Graph general (Facebook, Pinterest & Google+) -->
   <meta name="og:title" content="Tar Command Generator | Tar Command" />
   <meta name="og:description"
-    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
+    content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
   <meta name="og:url" content="https://tarcommand.com/" />
   <meta name="og:site_name" content="Tar Command Generator" />
   <meta name="og:type" content="website" />
@@ -31,7 +31,8 @@
     <div class="container w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50">
       <div class="columns-1 text-slate-200">TC</div>
       <h1 class="col-auto text-center text-6xl pb-4 text-yellow-500">tar command</h1>
-      <div class="text-slate-400 font-light">tarcommand allows you to quickly generate commands for creating archives,
+      <div class="text-slate-400 font-light">tarcommand allows you to quickly generate commands for creating
+        archives,
         compressing and uncompressing archives, and
         many other hard-to-remember features and options.</div>
     </div>
@@ -66,7 +67,7 @@
           <span class="title px-2">List</span>
         </label>
         <label class="flex radio p-2 cursor-pointer">
-          <input class="my-auto transform scale-125" type="radio" name="sfg" value="mod_test_label" />
+          <input class="my-auto transform scale-125" type="radio" name="sfg" value="test_label" />
           <span class="title px-2">Test Label</span>
         </label>
         <label class="flex radio p-2 cursor-pointer">
@@ -79,7 +80,7 @@
         </label>
       </div>
     </div>
-    <div class="container w-5/6 mt-4 mx-auto  bg-slate-50" id="arfw">
+    <div class="container w-5/6 mt-4 mx-auto bg-slate-50" id="arfw">
       <div>
         <h2 class="hidden">archiving formats</h2>
       </div>
