--- a/404.html
+++ b/404.html
@@ -158,7 +158,7 @@
           </div>
         </div>
         <div class="col-span-2 bg-slate-50">
-          <div data-ea-publisher="..." data-ea-type="text"></div>
+          <div data-ea-publisher="tarcommandcom" data-ea-type="text"></div>
         </div>
       </div>
     </div>
