--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <meta name="og:site_name" content="Tar Command Generator" />
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" />
 </head>
 
 <body class="bg-slate-100">
