--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" />
+  <meta http-equiv="X-Frame-Options" content="deny" />
 </head>
 
 <body class="bg-slate-100">
