--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <meta name="og:site_name" content="Tar Command Generator" />
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';" />
-  <meta http-equiv="X-Frame-Options" content="deny" />
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; img-src https://*; child-src 'none';" />
+  <base href="https://tarcommand.com/" target="_blank">
 </head>
 
 <body class="bg-slate-100">
