fix csp base64 img

--- a/404.html
+++ b/404.html
@@ -25,6 +25,8 @@
   <meta name="og:site_name" content="Tar Command Generator" />
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'none'; img-src https://*; img-src 'self' data: base64; child-src 'none'; base-uri 'self'; frame-ancestors 'none'; form-action 'none';" />
 </head>
 
 <body class="bg-slate-100">
