--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <meta name="og:type" content="website" />
   <meta name="og:image" content="https://tarcommand.com/android-chrome-512x512.png" />
   <meta http-equiv="Content-Security-Policy"
-    content="default-src 'none'; img-src https://*; child-src 'none'; base-uri 'self'; frame-ancestors 'none'; form-action 'none';" />
+    content="default-src 'none'; img-src https://*; img-src 'self' data: base64; child-src 'none'; base-uri 'self'; frame-ancestors 'none'; form-action 'none';" />
 </head>
 
 <body class="bg-slate-100">
