--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-50 font-extralight">
       <h3 class="text-slate-400">UNIX-Style:</h3>
-      <div class="pt-4 pb-4 text-2xl text-orange-300">$ <span id="taru" class="text-indigo-400 font-mono">tar
+      <div class="pt-4 pb-4 text-2xl text-orange-300">tar<span id="taru" class="text-indigo-400 font-mono">
           -cvf etc.tar
           /etc</span>
       </div>
       <h3 class="text-slate-400">GNU-Style:</h3>
-      <div class="pt-4 pb-4 text-2xl text-orange-300">$ <span id="targ" class="text-indigo-400 font-mono">tar
+      <div class="pt-4 pb-4 text-2xl text-orange-300">tar<span id="targ" class="text-indigo-400 font-mono">
           --create --verbose
           --file
           etc.tar
