--- a/404.html
+++ b/404.html
@@ -336,7 +336,7 @@
       Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
-      <a href="https://tarcommand.com/">&copy;2022 TAR Command, tarcommand.com</a>
+      <a href="https://tarcommand.com/">&copy;<span id="year"></span> TAR Command, tarcommand.com</a>
     </div>
   </form>
 </body>
