--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
       <h3 class="text-slate-400">UNIX-Style:</h3>
       <div class="pt-4 pb-4 text-2xl text-orange-300">tar<span id="taru" class="text-indigo-400 font-mono">
           -cvf etc.tar
-          /etc</span>
-      </div>
+          /etc</span></div>
       <h3 class="text-slate-400">GNU-Style:</h3>
       <div class="pt-4 pb-4 text-2xl text-orange-300">tar<span id="targ" class="text-indigo-400 font-mono">
           --create --verbose
