--- a/unicode.html
+++ b/unicode.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-16">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tar command generator | tarcommand.com</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -209,18 +209,22 @@
             ['3300-33FF', 'CJK 兼容(CJK Compatibility)'],
             ['3400-4DBF', 'CJK 统一表意符号扩展 A(CJK Unified Ideographs Extension A)'],
             ['4DC0-4DFF', '易经六十四卦符号(Yijing Hexagrams Symbols)'],
-            ['4E00-9FBF', 'CJK 统一表意符号(CJK Unified Ideographs)'],
+            ['4E00-9FFF', 'CJK 统一表意符号(CJK Unified Ideographs)'],
             ['A000-A48F', '彝文音节(Yi Syllables)'],
             ['A490-A4CF', '彝文字根(Yi Radicals)'],
-            ['A500-A61F', 'Vai'],
+            ['A4D0-A4FF', '老傈僳文'],
+            ['A500-A63F', '瓦伊文(Vaii)'],
             ['A660-A6FF', '统一加拿大土著语音节补充(Unified Canadian Aboriginal Syllabics Supplement)'],
             ['A700-A71F', '声调修饰字母(Modifier Tone Letters)'],
             ['A720-A7FF', '拉丁文扩展 - D(Latin Extended - D)'],
             ['A800-A82F', 'Syloti Nagri'],
+            ['A830-A83F', '通用印度数字'],
             ['A840-A87F', '八思巴字(Phags - pa)'],
             ['A880-A8DF', 'Saurashtra'],
+            ['A8E0-A8FF', '天城文扩展'],
             ['A900-A97F', '爪哇语(Javanese)'],
             ['A980-A9DF', 'Chakma'],
+            ['A9E0-A9FF', '缅甸文扩展-B'],
             ['AA00-AA3F', 'Varang Kshiti'],
             ['AA40-AA6F', 'Sorang Sompeng'],
             ['AA80-AADF', 'Newari'],
