--- a/index.html
+++ b/index.html
@@ -332,7 +332,8 @@
       </table>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 pb-2 bg-slate-50 text-slate-500 font-extralight">
-      Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>
+      Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>&nbsp;&nbsp;
+      <a href="/unicode.html">Unicode</a>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
       <a href="https://tarcommand.com/">&copy;<span id="year"></span> TAR Command, tarcommand.com</a>
