--- a/unicode.html
+++ b/unicode.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link href="/css/tailwind.css" rel="stylesheet">
+    <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
     <meta name="description"
         content="Quickly generate tar in archives and compressing modes. All formats included (gzip, bzip2, lbzip2, xz, zstd, etc). Ready to copy paste to your terminal in seconds." />
     <meta name="robots" content="noodp" />
@@ -90,6 +91,9 @@
             <tbody>
             </tbody>
         </table>
+    </div>
+    <div class="w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50 container text-center">
+        <div data-ea-publisher="tarcommandcom" data-ea-type="text"></div>
     </div>
     <script>
         const s = ['NUL', 'SOH', 'STX', 'ETX', 'EOT', 'ENQ', 'ACK', 'BEL', 'BS', 'HT', 'LF', 'VT', 'FF', 'CR', 'SO', 'SI', 'DLE', 'DC1', 'DC2', 'DC3', 'DC4', 'NAK', 'SYN', 'ETB', 'CAN', 'EM', 'SUB', 'ESC', 'FS', 'GS', 'RS', 'US'];
