--- a/unicode.html
+++ b/unicode.html
@@ -95,6 +95,9 @@
     <div class="w-5/6 mt-9 mx-auto px-4 pt-2 bg-slate-50 container text-center">
         <div data-ea-publisher="tarcommandcom" data-ea-type="text"></div>
     </div>
+    <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
+        <a href="https://tarcommand.com/">&copy;<span id="year"></span> TAR Command, tarcommand.com</a>
+    </div>
     <script>
         const s = ['NUL', 'SOH', 'STX', 'ETX', 'EOT', 'ENQ', 'ACK', 'BEL', 'BS', 'HT', 'LF', 'VT', 'FF', 'CR', 'SO', 'SI', 'DLE', 'DC1', 'DC2', 'DC3', 'DC4', 'NAK', 'SYN', 'ETB', 'CAN', 'EM', 'SUB', 'ESC', 'FS', 'GS', 'RS', 'US'];
 
