--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
       Links: <a href="https://linux-permissions.com/" class="underline">Linux Permissions</a>&nbsp;&nbsp;
       <a href="/unicode.html" class="underline">Unicode</a>&nbsp;&nbsp;
       <a href="/reqi.html" class="underline">Datetime Calculator</a>&nbsp;&nbsp;
+      <a href="/cd.html" class="underline">Countdown Timer</a>&nbsp;&nbsp;
       <a href="/schulte.html" class="underline">Schulte Grid</a>
     </div>
     <div class="container w-5/6 mt-4 mx-auto px-4 pt-2 bg-slate-100 text-slate-400 font-extralight">
