--- a/unicode.html
+++ b/unicode.html
@@ -29,17 +29,20 @@
     <style>
         @font-face {
             font-family: 'Noto Sans';
-            /* 自定义字体名称 */
             src: url('css/NotoSans-Regular.ttf') format('truetype');
-            /* 指定路径和字体格式 */
             font-weight: normal;
-            /* 字体粗细 */
             font-style: normal;
-            /* 字体样式 */
+        }
+
+        @font-face {
+            font-family: 'Noto Emoji';
+            src: url('css/NotoEmoji-Regular.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
         }
 
         body {
-            font-family: 'Noto Sans', sans-serif;
+            font-family: 'Noto Sans', 'Noto Emoji', sans-serif;
             /* 回退到系统默认 sans-serif 字体 */
         }
     </style>
