--- a/unicode.html
+++ b/unicode.html
@@ -42,8 +42,7 @@
         }
 
         body {
-            font-family: 'Noto Sans', 'Noto Emoji', sans-serif;
-            /* 回退到系统默认 sans-serif 字体 */
+            font-family: 'Noto Sans', 'Noto Emoji', 'Arial Unicode MS', sans-serif;
         }
     </style>
 </head>
